--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "latest",
+    "@types/ffmpeg-static": "^5.1.0",
+    "@types/ffprobe-static": "^2.0.3",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
